// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rux-checkbox-group renders 1`] = `
<rux-checkbox-group>
  <mock:shadow-root>
    <div class="rux-form-field" part="form-field">
      <div class="hidden rux-label" part="label">
        <slot name="label"></slot>
      </div>
      <div class="rux-checkbox-group" part="container">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
</rux-checkbox-group>
`;

exports[`rux-checkbox-group renders label prop 1`] = `
<rux-checkbox-group label="hello">
  <mock:shadow-root>
    <div class="rux-form-field" part="form-field">
      <div class="rux-label" part="label">
        <slot name="label">
          hello
        </slot>
      </div>
      <div class="rux-checkbox-group" part="container">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
</rux-checkbox-group>
`;

exports[`rux-checkbox-group renders label slot 1`] = `
<rux-checkbox-group>
  <mock:shadow-root>
    <div class="rux-form-field" part="form-field">
      <div class="rux-label" part="label">
        <slot name="label"></slot>
      </div>
      <div class="rux-checkbox-group" part="container">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  <div slot="label">
    hello
  </div>
</rux-checkbox-group>
`;
